test/types/range/diten/badRange2.good
badRange2.chpl:5: error: unbounded range has infinite length
