test/types/range/diten/badRange2.chpl
def foo(i: int) {
  writeln(i);
}

foo(..);
